# OTUS_HW4

./: Makefile  README.md  pyproject.toml
src/otus_hw4/: api.py
tests/: test.py
